  (Antonin Décimo, review by David Allsopp)

- #10469: Add Thread.set_uncaught_exception_handler and
  Thread.default_uncaught_exception_handler.
  (Enguerrand Decorne, review by David Allsopp)

- #10697: Bindings of dup and dup2 in win32unix now correctly call
  WSADuplicateSocket on sockets instead of DuplicateHandle.
  (Antonin Décimo, review by Xavier Leroy and Nicolás Ojeda Bär)

* #10926: Ensure all C functions in the Unix library are prefixed with `caml_`.
  (David Allsopp, review by Kate Deplaix, Damien Doligez and Xavier Leroy)

- #10951: Introduce the Thread.Exit exception as an alternative way to
  terminate threads prematurely.  This alternative way will become
  the standard way in 5.0.
  (Xavier Leroy, review by Florian Angeletti)

### Tools:

- #9701: Release bytecode only after collecting backtrace information
  for exceptions, same for dynamic loaded code compiled from toplevel on
  ocamlnat.
  (Renato Alencar, reported by Krzysztof Leśniak, reviewed by Gabriel Scherer)

- #10839: Fix regression of #show when printing class type
  (Élie Brami, review by Florian Angeletti)

- #3959, #7202, #10476: ocaml, in script mode, directive errors
  (`#use "missing_file";;`) use stderr and exit with an error.
  (Florian Angeletti, review by Gabriel Scherer)

- #10438: add a new toplevel cli argument `-e <script>` to
  run script passed to the toplevel.
  (Pavlo Khrystenko, review by Gabriel Scherer)

- #10524: Directive argument type error now shows expected and received type.
  (Wiktor Kuchta, review by Gabriel Scherer)

- #10560: Disable colors if the env variable `NO_COLOR` is set.  If
  `OCAML_COLOR` is set, its setting takes precedence over `NO_COLOR`.
  (Nicolás Ojeda Bär, report by Gabriel Scherer, review by Daniel Bünzli,
  Gabriel Scherer and David Allsopp)

- #10565: Toplevel value printing: truncate strings only after 8 bytes.
  (Wiktor Kuchta, review by Xavier Leroy)

- #10527: Show "#help;; for help" at toplevel startup